[package]
name = "casper-event-standard"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
casper-types = "5.0.0"
casper-event-standard-macro = { version = "0.5.0", path = "../casper-event-standard-macro" }
serde = { version = "1.0", features = ["derive"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
casper-contract = { git = "https://github.com/casper-network/casper-node", branch = "feat-2.0", default-features = false }

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[features]
serde = [ "dep:serde" ]

[patch.crates-io]
casper-types = { version = "5.0.0", git = "https://github.com/casper-network/casper-node", branch = "release-2.0.0-rc4" }
